# concisum

./: .gitignore  README.md  pyproject.toml
concisum/: __init__.py  cli.py  config.py  load_json.py  models.py  schemas.py  summarizer.py  utils.py
concisum/diagnosis/: agents.py  build_database.py  database.py  models.py
concisum/summary/: agents.py  models.py
scripts/: enhance_md.py  parse_md_to_json.py  parse_md_to_json_llm.py
tests/: test_load_json.py
tests/data/: test.json  test_summary.md
