[project]
name = "concisum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai-slim[openai]>=0.0.18",
]

[project.scripts]
verbatim = "conciusm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["concisum/**/*"]

[tool.pyright]
venvPath = "."
venv = ".venv"
