[project]
name = "concisum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.59.7",
    "pydantic>=2.10.5",
    "pydantic-ai>=0.1.1",
    "typer>=0.15.1",
]

[project.scripts]
concisum = "concisum.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["concisum/**/*"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = ["pytest>=8.3.5"]
